# fastapi-core-structures

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  ruff.toml
src/: constants.py  default.db  main.py  models.py  routers.py
src/database/: main.py  models.py
