[project]
name = "fastapi-core-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pre-commit>=4.5.1",
    "sqlalchemy>=2.0.46",
    "pytest",
    "pytest-benchmark>=5.2.3",
    "go-task-bin>=3.46.4",
    "pyrefly>=0.48.2",
]
